src/objects/Apttus_DealMgr__DealGuidanceRule__c.object
<CustomObject>
    <description>Represents a single rule in an deal guidance ruleset</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__AccountScope__c</fullName>
        <description>One or more accounts associated with the rule</description>
        <inlineHelpText>One or more accounts associated with the rule</inlineHelpText>
        <label>Account Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the rule is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__BusinessObject__c</fullName>
        <description>The business object which provides the context for the rule</description>
        <inlineHelpText>The business object which provides the context for the rule</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_DealMgr__GuidanceType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_DealMgr__Deal__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_DealMgr__DealLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__LineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the rule criteria</description>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Criteria__c</fullName>
        <description>The rule criteria specification</description>
        <label>Rule Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__CurrencyScope__c</fullName>
        <description>One or more currencies associated with the rule. Only applicable in multi-currency organizations.</description>
        <inlineHelpText>One or more currencies associated with the rule. Only applicable in multi-currency organizations.</inlineHelpText>
        <label>Currency Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__CustomMeasureBandDirection__c</fullName>
        <description>Defines the direction of the custom measure band entries.</description>
        <inlineHelpText>Defines the direction of the custom measure band entries.</inlineHelpText>
        <label>Custom Measure Band Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HighLow</fullName>
                </value>
                <value>
                    <fullName>LowHigh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__CustomMeasureSource__c</fullName>
        <description>Indicates the source field in the business object which holds the custom measure value</description>
        <inlineHelpText>Indicates the source field in the business object which holds the custom measure value</inlineHelpText>
        <label>Custom Measure Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Description__c</fullName>
        <description>The description for the rule</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DimensionSetId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the dimension set associated with the rule.</description>
        <label>Dimension Set</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_DealMgr__DealGuidanceDimensionSet__c.Apttus_DealMgr__GuidanceType__c</field>
                <operation>equals</operation>
                <valueField>$Source.Apttus_DealMgr__GuidanceType__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_DealMgr__DealGuidanceDimensionSet__c</referenceTo>
        <relationshipLabel>Deal Guidance Rules</relationshipLabel>
        <relationshipName>DealGuidanceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__GuidanceType__c</fullName>
        <description>The guidance type associated with the rule. This determines the types of dimension sets that may be associated with the rule</description>
        <inlineHelpText>The guidance type associated with the rule. This determines the types of dimension sets that may be associated with the rule</inlineHelpText>
        <label>Guidance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deal Level</fullName>
                </value>
                <value>
                    <fullName>Line Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__InitialRows__c</fullName>
        <description>The number of initial entries in the rule</description>
        <inlineHelpText>The number of initial entries in the rule</inlineHelpText>
        <label>Initial Rows</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__MatchRule__c</fullName>
        <description>Indicates if the rule should match all or match any dimension</description>
        <inlineHelpText>Indicates if the rule should match all or match any dimension</inlineHelpText>
        <label>Match Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match All</fullName>
                    <default>true</default>
                    <label>Match All</label>
                </value>
                <value>
                    <fullName>Match Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Measure__c</fullName>
        <description>The measure used to provide the guidance</description>
        <inlineHelpText>The measure used to provide the guidance</inlineHelpText>
        <label>Measure</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_DealMgr__GuidanceType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Annual Price Per Unit</fullName>
                </value>
                <value>
                    <fullName>Net Price</fullName>
                </value>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Margin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ProductFamily__c</fullName>
        <description>One or more product families associated with the rule. Only applicable to Line Guidance Types.</description>
        <inlineHelpText>One or more product families associated with the rule. Only applicable to Line Guidance Types.</inlineHelpText>
        <label>Product Family Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ProductGroupScope__c</fullName>
        <description>One or more product groups associated with the rule</description>
        <inlineHelpText>One or more product groups associated with the rule</inlineHelpText>
        <label>Product Group Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated with the rule. Only applicable to Line Guidance Types</description>
        <inlineHelpText>ID of the product associated with the rule. Only applicable to Line Guidance Types</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Deal Guidance Rules</relationshipLabel>
        <relationshipName>DealGuidanceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ProductScope__c</fullName>
        <description>One or more products associated with the rule</description>
        <inlineHelpText>One or more products associated with the rule</inlineHelpText>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ServiceLocationScope__c</fullName>
        <description>One or more service locations associated with the rule</description>
        <inlineHelpText>One or more service locations associated with the rule</inlineHelpText>
        <label>Service Location Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deal Guidance Rule</label>
    <listViews>
        <fullName>Apttus_DealMgr__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_DealMgr__Active__c</columns>
        <columns>Apttus_DealMgr__Sequence__c</columns>
        <columns>Apttus_DealMgr__BusinessObject__c</columns>
        <columns>Apttus_DealMgr__DimensionSetId__c</columns>
        <columns>Apttus_DealMgr__GuidanceType__c</columns>
        <columns>Apttus_DealMgr__InitialRows__c</columns>
        <columns>Apttus_DealMgr__Measure__c</columns>
        <columns>Apttus_DealMgr__ProductFamily__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Guidance Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>